...
<!-- SPDX-FileCopyrightText: 2026 Conduction B.V. <info@conduction.nl> -->
<!-- SPDX-License-Identifier: EUPL-1.2 -->
<resources>
    <string name="app_name">Keepiq</string>
    <!-- Vault, Send and generator screens (clients-mobile-apps group 3). -->
    <string name="tab_vault">Vault</string>
    <string name="tab_generator">Generator</string>
    <string name="tab_send">Send</string>
    <string name="action_back">Back</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_close">Close</string>
    <string name="action_copy">Copy</string>
    <string name="action_show">Show</string>
    <string name="action_hide">Hide</string>
    <string name="action_edit">Edit</string>
    <string name="action_move">Move</string>
    <string name="action_trash">Move to trash</string>
    <string name="action_refresh">Sync now</string>
    <string name="action_retry">Try again</string>
    <string name="action_open">Open</string>
    <string name="action_share">Share</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_generate">Generate</string>
    <string name="action_use">Use this</string>
    <string name="cd_copy_field">Copy %1$s</string>
    <string name="cd_show_field">Show %1$s</string>
    <string name="cd_hide_field">Hide %1$s</string>
    <string name="cd_open_folder">Open folder %1$s</string>
    <string name="cd_open_item">Open %1$s</string>
    <string name="cd_switch_account">Switch account, now %1$s</string>
    <string name="cd_add_item">Add an item</string>
    <string name="cd_new_send">New Send</string>
    <string name="cd_folder_actions">Folder actions</string>
    <string name="cd_remove_field">Remove field %1$s</string>
    <string name="cd_regenerate">Generate a new value</string>
    <string name="copied">Copied. Cleared in %1$d seconds.</string>
    <string name="copied_kept">Copied.</string>
    <string name="accounts_title">Accounts</string>
    <string name="accounts_add">Add an account</string>
    <string name="accounts_limit">You can pair up to 5 accounts.</string>
    <string name="settings_clipboard">Clear the clipboard after</string>
...
    <string name="send_text_label">Text to send</string>
    <string name="send_views_label">Views</string>
    <string name="send_expiry_label">Expires after</string>
    <string name="send_hours_label">Hours</string>
    <string name="send_password_label">Password (optional)</string>
    <string name="send_password_unavailable">This device cannot protect a send with a password yet.</string>
    <string name="send_create">Create link</string>
    <string name="send_created">Your link is ready. Anyone with it can open the send.</string>
    <string name="send_created_password">Your link is ready. Share the password another way.</string>
    <string name="send_copy_link">Copy link</string>
    <string name="send_nothing">There is nothing to send.</string>
    <string name="send_views_range">Choose 1 to 100 views.</string>
    <string name="send_hours_range">Enter a whole number of hours, at least 1.</string>
...
    <string name="open_send_wrong">Wrong password. %1$d tries left before the send is destroyed.</string>
    <string name="open_send_burned">Too many wrong passwords. The send is destroyed.</string>
    <string name="open_send_gone">This send does not exist anymore. It expired or was opened already.</string>
    <string name="open_send_no_key">The link misses its key, so the send cannot be opened.</string>
    <string name="open_send_failed">Could not open the send.</string>
    <string name="open_send_last_view">This was the last view. The send is gone now.</string>
    <string name="open_send_paste">Open a Send link</string>
    <string name="composite_number">Card number</string>
    <string name="composite_expiry">Expiry (MM/YY)</string>
    <string name="composite_cvv">CVV</string>
    <string name="composite_pin">PIN</string>
    <string name="composite_cardholder">Cardholder</string>
    <string name="composite_first_name">First name</string>
...
